# flashcards

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/app/: methods.rs  mod.rs  models.rs  setup.rs
src/database/: create.rs  mod.rs
src/database/models/: card.rs
ui/: flashcards_ui.slint
ui/models/: ui_card.slint
ui/screens/: card_add.slint  card_edit.slint  card_list.slint  error.slint  lesson_run.slint  loading.slint  screens.slint
ui/screens/components/: common.slint
